# project-oop

./: .gitignore  CMakeLists.txt  README.md
config/: .env  Doxyfile
database/: data_music_store_db.sql  db.sql  music_store_db.sql
docs/: cd.md  class_diagram.md  menu.md  readme.md
docs/doc/: _add_item_action_8cpp.html  _add_item_action_8cpp__incl.dot  _add_item_action_8h.html  _add_item_action_8h.js  _add_item_action_8h__dep__incl.dot  _add_item_action_8h__incl.dot  _add_item_action_8h_source.html  _admin_create_order_action_8cpp.html  _admin_create_order_action_8cpp__incl.dot  _admin_create_order_action_8h.html  _admin_create_order_action_8h.js  _admin_create_order_action_8h__dep__incl.dot  _admin_create_order_action_8h__incl.dot  _admin_create_order_action_8h_source.html  _auth_manager_8cpp.html  (+404 more)
src/: AddItemAction.cpp  AddItemAction.h  AdminCreateOrderAction.cpp  AdminCreateOrderAction.h  AuthManager.cpp  AuthManager.h  CreateOrderAction.cpp  CreateOrderAction.h  CreateOrderActionBase.cpp  CreateOrderActionBase.h  Customer.cpp  Customer.h  CustomerManager.cpp  CustomerManager.h  Database.cpp  Database.h  DisplayAllItemsAction.cpp  DisplayAllItemsAction.h  EditItemAction.cpp  EditItemAction.h  ExportInvoice.cpp  ExportInvoice.h  FindItemAction.cpp  FindItemAction.h  Hasher.cpp  Hasher.h  IMenuAction.h  ItemInStockAction.cpp  ItemInStockAction.h  ManageCustomersAction.cpp  ManageCustomersAction.h  MenuActionFactory.cpp  MenuActionFactory.h  MenuManager.cpp  MenuManager.h  MusicItem.cpp  MusicItem.h  MusicStore.cpp  MusicStore.h  Order.cpp  (+18 more)
test/: test_main.cpp
(+247 files in other folders)
